# CollatzConjectureBenchmark

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
Src/: Main.cpp
include/: benchmark.hpp
src/: Main.cpp  main.cpp
src/impl/: Benchmark.cpp  benchmark.cpp
src/include/: Benchmark.h  Benchmark.hpp  benchmark.hpp
src/lib/: benchmark.cpp
